@@ -27,6 +27,7 @@
     * Require user attention after each print, even failed ones (if enabled)
     * Added checked and finished flags to api/printer
     * Added states structure to api/connection endpoint
+    * Added Connect configuration info to api/connection endpoint
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
